# yyy_monkey

./: .gitignore  README.md  copy_ollama_model.py
auto_helper/: DEVELOPMENT_PLAN.md  README.md
auto_helper/extension/: manifest.json
auto_helper/extension/background/: llm-client.js  service-worker.js
auto_helper/extension/config/: llm_prompt.json
auto_helper/extension/content/: content.js  interactor.js  ui-overlay.js  video-info.js
auto_helper/extension/options/: options.css  options.html  options.js
auto_helper/extension/popup/: popup.css  popup.html  popup.js
auto_helper/extension/utils/: messaging.js  selectors.js  storage.js
config/: auth_wx.json  medium_token.txt  twitter_credentials.json
creator/: README.md  plan.md  pyproject.toml
creator/config/: target.json
creator/src/creator/: __init__.py  __main__.py  analyzer.py  planner.py  scraper.py
docs/: 00_overview.md  01_product_design.md  02_carrier_comparison.md  03_tech_design.md  04_risk_compliance.md  05_roadmap.md  06_api_spec.md  07_config_spec.md  08_site_adaptation_douyin_jingxuan.md  GIT_HISTORY_CLEANUP.md  README.md  ai_mistakes_and_lessons.md  wechat_article_auto_comment.md  youtube_shorts_helper_dev_journey.md
douyin/: .gitignore  README.md  README_DEPLOY.md  build_exe.bat  douyin_bot.spec  pyproject.toml  requirements.txt
douyin/config/: task_prompt.json
douyin/data/: comments.txt
douyin/scripts/: gen_license.py
douyin/src/douyin_auto_like/: cli.py  douyin.py  license.py
extension/: README.md  background.js  content.js  manifest.json  popup.html  popup.js
local_service/: .gitignore  README.md  README_DEPLOY.md  data.sqlite3  pyproject.toml
local_service/app/: db.py  main.py  models.py  rate_limit.py  service.py
local_service/data/: comments.enc  danmaku.enc  danmaku.txt
local_service/scripts/: encrypt_data.py
local_service/src/douyin_auto_like/: browser.py  cli.py  danmaku.py  danmaku_cli.py  douyin.py
media-publisher/: README.md  publish_gzh_drafts.py  pyproject.toml  verify_install.py
media-publisher/docs/: plan-media-publisher-independent-for-blue-ocean.md  wechat_article_01.md  wechat_article_02.md  wechat_article_03.md  降低AI检测率优化指南.md
media-publisher/examples/: README.md  publish_lesson_example.py
media-publisher/src/media_publisher/: __init__.py  __main__.py
media-publisher/src/media_publisher/core/: __init__.py  adapter.py  base.py  browser.py  devto.py  gzh.py  gzh_video.py  instagram.py  medium.py  tiktok.py  twitter.py  wechat.py  youtube.py
media-publisher/src/media_publisher/gui/: __init__.py  app.py
media-publisher/src/media_publisher/shared/: __init__.py  io.py  security.py
media-publisher/tests/: test_atomic_io.py  test_import_side_effects.py  test_job_cli.py  test_security.py
scripts/: copy_ollama_model.py  generate_icons.py
transcript/: cursor_auto_api.md
wechat/: DEVELOPER_GUIDE.md  README.md  README_DEPLOY.md  build_exe.bat  pyproject.toml  pyrightconfig.json  requirements.txt  wechat_bot.spec
wechat/config/: task_prompt.json
wechat/data/: comments_default.txt  comments_education.txt  comments_parenting.txt  topic_config.json
wechat/scripts/: gen_license.py
wechat/src/wechat_auto_like/: license.py
wechat/src/wechat_client/: adapter.py  cli.py  controller.py  core.py  license.py  llm_client.py  platform_mgr.py
wechat/tests/: test_llm_client.py
wechat_gzh/: .gitignore  README.md  WeChatAutoComment.spec  auto_follow.py  build.bat  build.py  build.sh  build_app.py  fetch_all_users.py  gui_app.py  pyproject.toml  web_app.py
wechat_gzh/assets/: README.md
wechat_gzh/config/: calibration-win.json  calibration.json  comment_history.json  followed_by_followee_mia.json  followeds_20260207_fengshu.json  followeds_20260207_mia.json  followees.json  followees_20260207_ririshengjinririfu.json  followees_20260207_yiqichengzhang.json  followees_20260207_zhichangluosidao.json  task_prompt.json  users.txt
wechat_gzh/scripts/: copy_model.py
wechat_gzh/wechat_gzh/: WeChatAutoComment.spec  __init__.py  api.py  auto_comment.py  config.py  get_users.py  llm_client.py
wechat_gzh/wechat_gzh/automation/: __init__.py  auto_follow.py  calibration.py  commenter.py  navigator.py  ocr.py  utils.py  visualizer.py  window.py
