[project]
name = "creator"
version = "0.1.0"
description = "公众号内容规划工具 - 抓取参考公众号数据、分析内容特征、生成日更规划"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.49.0",
    "rich>=13.0.0",
    "openai>=1.0.0",
]

[project.scripts]
creator = "creator.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/creator"]
