[project]
name = "douyin-bot"
version = "0.1.0"
description = "抖音网页端智能互动助手，基于 LLM 评分自动决定是否点赞和评论。"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "selenium>=4.20.0",
  "pyinstaller>=6.0.0",
  "openai>=1.0.0",  # LLM 客户端依赖
]

[project.scripts]
douyin-bot = "douyin_auto_like.cli:main"

[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/douyin_auto_like"]


