[project]
name = "media-publisher"
version = "3.0.0"
description = "通用媒体发布工具 - 多平台内容一键发布（微信视频号、YouTube、Medium、Twitter/X、Dev.to、TikTok、Instagram）"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.57.0",
    "gradio>=5.4.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.0.0",
    "requests>=2.28.0",
    "requests-oauthlib>=1.3.0",
]

[project.scripts]
media-publisher = "media_publisher.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/media_publisher"]
