[project]
name = "wechat-bot"
version = "0.1.0"
description = "Automate WeChat Desktop Client (Mac/Win) for Channel interactions using Computer Vision and LLM."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pyautogui>=0.9.54",
  "opencv-python>=4.8.0",
  "pyperclip>=1.8.2",
  "pillow>=10.0.0",
  "pyscreeze>=0.1.30",
  "cnocr>=2.3.0",
  "cnstd>=1.2.3",
  "onnxruntime>=1.16.0",
  "huggingface-hub[cli]>=0.19.0",
  "openai>=1.0.0",
]

[project.scripts]
wechat-bot = "wechat_client.cli:main"

[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wechat_client"]
