[project]
name = "wechat-gzh"
version = "0.1.0"
description = "微信公众号自动化工具 - 自动留言和用户信息获取"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pyautogui>=0.9.54",
    "pillow>=10.4.0",
    "pyperclip>=1.8.0",
    "numpy>=1.24.0",
    "cnocr>=2.3.0",
    "cnstd>=1.2.3",
    "onnxruntime>=1.16.0",
    "openai>=1.0.0",
    "nicegui>=2.24.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wechat_gzh"]

[dependency-groups]
dev = [
    "pyinstaller>=6.18.0",
]

